libstdc++-v3/config/io/c_io_stdio.h
@@ -1,6 +1,6 @@
 // underlying io library  -*- C++ -*-
 
-// Copyright (C) 2000, 2001, 2002, 2003 Free Software Foundation, Inc.
+// Copyright (C) 2000, 2001, 2002, 2003, 2004 Free Software Foundation, Inc.
 //
 // This file is part of the GNU ISO C++ Library.  This library is free
 // software; you can redistribute it and/or modify it under the
@@ -43,6 +43,7 @@ namespace std
   // for basic_file.h
   typedef FILE __c_file;
 
+  // XXX GLIBCXX_ABI Deprecated
   // for ios_base.h
   struct __ios_flags
   {
