libstdc++-v3/testsuite/27_io/ios_base/cons/copy_neg.cc
@@ -41,5 +41,5 @@ void test02()
   test_base io2 = io1; 
 }
 // { dg-error "within this context" "" { target *-*-* } 41 } 
-// { dg-error "is private" "" { target *-*-* } 736 } 
+// { dg-error "is private" "" { target *-*-* } 779 } 
 // { dg-error "copy constructor" "" { target *-*-* } 0 } 
